Fixed the menu's z-index so that it's over the embedded content

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@
 
 #menu {
   position: fixed;
+  z-index: 99;
   top: 0;
   width: 100%; }
   #menu .menu-toggle {
